--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "portfolio_backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
-  "type": "module",
+  "main": "index.js",
+  "repository": "https://github.com/IlyaKhamraev/backend_portfolio.git",
+  "author": "Ilya Khamraev",
+  "license": "MIT",
   "scripts": {
-    "build": "tsc -p tsconfig.json -wpa",
-    "start": "tsc -w & nodemon dist/index.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "dev": "nodemon src/index.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "fastify": "^4.21.0"
+    "@fastify/passport": "^2.3.0",
+    "fastify": "^4.21.0",
+    "fastify-plugin": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "^20.4.5",
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0",
-    "eslint": "^8.46.0",
     "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6"
   }
 }
