--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "dev": "nodemon src/index.ts"
   },
   "dependencies": {
+    "@fastify/cookie": "^9.0.4",
     "@fastify/mongodb": "^7.0.0",
     "@fastify/passport": "^2.3.0",
+    "@fastify/session": "^10.4.0",
+    "@types/passport": "^1.0.12",
+    "@types/passport-local": "^1.0.35",
     "fastify": "^4.21.0",
-    "fastify-plugin": "^4.5.1"
+    "fastify-plugin": "^4.5.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.4.5",
