--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fastify/session": "^10.4.0",
     "@types/passport": "^1.0.12",
     "@types/passport-local": "^1.0.35",
+    "connect-mongo": "^5.0.0",
     "fastify": "^4.21.0",
     "fastify-plugin": "^4.5.1",
     "passport-local": "^1.0.0"
