--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fastify/cookie": "^9.0.4",
+    "@fastify/cors": "^8.3.0",
     "@fastify/mongodb": "^7.0.0",
     "@fastify/passport": "^2.3.0",
     "@fastify/session": "^10.4.0",
