--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@fastify/cookie": "^9.0.4",
     "@fastify/cors": "^8.3.0",
     "@fastify/mongodb": "^7.0.0",
+    "@fastify/multipart": "^7.7.3",
     "@fastify/passport": "^2.3.0",
     "@fastify/session": "^10.4.0",
     "@types/passport": "^1.0.12",
     "@types/passport-local": "^1.0.35",
     "connect-mongo": "^5.0.0",
     "fastify": "^4.21.0",
-    "fastify-file-upload": "^4.0.0",
     "fastify-plugin": "^4.5.1",
     "passport-local": "^1.0.0"
   },
